--- a/ClassLibraryTests/ClassLibraryTests.csproj
+++ b/ClassLibraryTests/ClassLibraryTests.csproj
@@ -56,6 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Controller\EatingControllerTests.cs" />
     <Compile Include="Controller\User_ControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
