--- a/ClassLibraryTests/ClassLibraryTests.csproj
+++ b/ClassLibraryTests/ClassLibraryTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Controller\EatingControllerTests.cs" />
+    <Compile Include="Controller\ExerciseControllerTests.cs" />
     <Compile Include="Controller\User_ControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
